Date 2021-05-18
Version 1.8.2
- Added parameter 'editorVersion' to createMailing to be able to select between a CMS1 and CMS2 mailing

Date 2021-05-06
Version 1.8.1
- Fixing misspelled package name for mailing blacklists

Date 2021-04-30
Version 1.8.0
- Added methods for managing mailing blacklists

Date 2021-02-01
Version 1.7.3
- Added parameter "embedContactHash" to getOpens and getClicks
- Added method to get domain used for a mailing
- Added methods for adding, deleting and retrieving mailing specific blacklists (Versandsperrlisten) to MailingsService
- Fixing problem of being not able to set values containing XML special characters in MailingsService #setSender, #setSubject, #setPreviewText, and #setTemplate

Date 2021-01-26
Version 1.7.2
- Added getCount method to de\xqueue\maileon\api\client\contacts\Contacts object
- Added getType and getMailingsByKeywords to mailing service
- Added parameter $embedTransactionId to getRecipients, getOpens, and getClicks
- Added method for getting unsubscription reasons
- Fixed bug when not being able to attach documents to a newsletter using special characters in target filename

Date 2020-08-13
Version 1.7.1
- Added client infos to opens and clicks

Date 2020-07-29
Version 1.7.0
- Added parameter updated_after for ContactsService getContactsCount and getContacts fot filtering only changed contacts
- Added new standard contact fields PERMISSION_STATUS and SENDOUT_STATUS

Date 2020-07-03
Version 1.6.5
- Added methods for getting and setting post sendout cleanup (deleting the used contact list and filter)
- Added method to set sendout optimization (streching sendout, ...)

Date 2020-06-10
Version 1.6.4
- Fixed reports namespace in XMLDeserializer.php

Date 2020-06-10
Version 1.6.3
- Fixed reports namespace by removing "Reports" from end of namespace
- Removed trailing / in require for test/composer.json

Date 2020-05-20
Version 1.6.2
- Added methods to update contacts by external ID or email address, directly