@@ -20,7 +20,7 @@
 		}
 	],
 	"require" : {
-		"php" : "^7.0.0",
+		"php" : "^7.0|^8.0",
 		"ext-curl" : "*",
 		"ext-mbstring" : "*",
 		"ext-libxml" : "*"
